force-app/main/default/objects/RLObject1__c/RLObject1__c.object-meta.xml
<CustomObject>
    <description>TEstDescription RLObject1</description>
    <label>RLObject1</label>
    <nameField>
        <label>RLObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RLObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>