force-app/main/default/objects/RLObject1__c/fields/RLObject1Field1__c.field-meta.xml
<CustomField>
    <fullName>RLObject1Field1__c</fullName>
    <label>RLObject1Field1</label>
    <type>Phone</type>
</CustomField>