force-app/main/default/objects/RLObject1__c/fields/RLObject1Field2__c.field-meta.xml
<CustomField>
    <fullName>RLObject1Field2__c</fullName>
    <label>RLObject1Field2</label>
    <type>Email</type>
</CustomField>