force-app/main/default/objects/RLObject1__c/fields/RLObject1Field4__c.field-meta.xml
<CustomField>
    <fullName>RLObject1Field4__c</fullName>
    <label>RLObject1Field4</label>
    <type>Email</type>
</CustomField>